# homework2026

./: build.sh  fire_tester  homework2026.sh  run.sh
cilent/: CMakeLists.txt
cilent/include/cilent/: image_processor.h  serial_sender.h
cilent/src/: fire_tester.cpp  image_processor.cpp  kalman_filter.cpp  main.cpp  serial_sender.cpp
install/: local_setup.sh  setup.sh
install/cilent/include/cilent/: image_processor.h  kalman_filter.h
install/cilent/lib/cilent/: cilent_main
install/cilent/share/cilent/: local_setup.dsv  local_setup.sh  package.sh
install/cilent/share/cilent/cmake/: cilentConfig.cmake  export_cilentExport-noconfig.cmake
log/: latest_build
